# cookiecutter-python

./: .azure-pipelines.yaml  .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENCE  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_name}}/.github/workflows/: build_and_test.yaml  publish_and_release.yaml
{{cookiecutter.project_name}}/app/: app.py  requirements.txt
{{cookiecutter.project_name}}/app/pyinstaller/: app.py  build_app.py
{{cookiecutter.project_name}}/app/pyinstaller/hooks/: hook-itk.py  hook-vtk.py
{{cookiecutter.project_name}}/dev/: 0_create_environment.bat  1_install_editable.py  2a_build_wheel.py  2b_install_wheel.py  3_build_documentation.py  4a_release_network.py  4b_release_artifactory.py  README.md
{{cookiecutter.project_name}}/docs/: conf.py  index.rst
{{cookiecutter.project_name}}/docs/api/: api.rst
{{cookiecutter.project_name}}/docs/demos/: README.md
{{cookiecutter.project_name}}/docs/validation/: validation.rst
{{cookiecutter.project_name}}/docs/validation/0.0.0/: validation.rst
{{cookiecutter.project_name}}/scripts/: example.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py  _version.py  exceptions.py  resources.py
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name}}/tests/data/: README.md
(+3 files in other folders)
