[build-system]
requires = ["setuptools", "setuptools-scm", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
authors = [
    { name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" },
]
description = "My package description"
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">={{cookiecutter.minimal_python_version}}"
keywords = []
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.package_name}}.__main__:main"

[tool.setuptools.package-data]
"{{cookiecutter.package_name}}.data" = ["*.*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/{{cookiecutter.package_name}}/_version.py"
versionfile_build = "{{cookiecutter.package_name}}/_version.py"
tag_prefix = ""
parentdir_prefix = "{{cookiecutter.package_name}}-"
